tests/fixtures/iptables_sample.rules
# Generated by iptables-save v1.8.9 on Tue Oct  6 09:00:00 2026
# netdrift-hostname: edge-gw01
# netdrift-interface: eth0 203.0.113.2/29 zone=wan trust=0
# netdrift-interface: eth1 10.0.1.1/24 zone=dmz trust=25
# netdrift-interface: eth2 10.0.2.1/24 zone=db trust=90
# netdrift-interface: eth3 10.0.3.1/24 zone=lan trust=100
# netdrift-route: 10.0.20.0/24 via 10.0.2.254 dev eth2
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth0 -d 203.0.113.5/32 -p tcp -m tcp --dport 8443 -m comment --comment "publish web" -j DNAT --to-destination 10.0.1.5:443
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o eth1 -d 10.0.1.5/32 -p tcp -m tcp --dport 443 -m comment --comment "inet to web" -j ACCEPT
-A FORWARD -i eth1 -o eth2 -s 10.0.1.5/32 -d 10.0.2.10/32 -p tcp -m multiport --dports 5432,5433 -j ACCEPT
-A FORWARD -i eth1 -o eth2 -j DROP
-A FORWARD -i eth3 -o eth0 -j ACCEPT
-A FORWARD -i eth3 -o eth1 ! -s 10.0.3.99/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -i eth3 -o eth2 -s 10.0.3.0/24 -d 10.0.20.0/24 -p tcp -m tcp --dport 3306 -j ACCEPT
COMMIT
